--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+@bright Gray = #394147;
+@straw = #D1BD88;
+@san Juan = #314D69;
+@gull Gray = #98ACB5;
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
