--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,3 +1,30 @@
+header {
+  padding-top: 70px;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  background-image: linear-gradient(to right, @gullGray, @sanJuan);
+  
+  .header-left{
+    img {
+      width: auto;
+      height: 350px;
+    }
+  }
 
-.main-content {
+  .header-right{
+    p {
+      
+    }
+    button {
+    
+    }
+  }
+}
+
+.bottom-banner{
+  img {
+  width: 100px;
+  height: auto;
+  }
 }
