--- a/less/global.less
+++ b/less/global.less
@@ -3,6 +3,13 @@ h1 {
   font-weight: bold;
   color: #D1BD88;
 }
+
+h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
 a {
   text-decoration: none;
 }
