--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,13 +12,7 @@
     justify-content: space-around;
     align-items: center;
     a {
-      .custom-button;
-    }
-
-    span {
-      padding-top: 5px;
-      display: inline-block;
-      transform: rotate(180deg);
+      .custom-button(@altColor, white);
     }
   }
 }
