--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,9 @@
 // colors
+@mediumBg: @sanJuan;
+@altColor: @straw;
+@lightBg: @gullGray;
+@darkBg: @brightGray;
+
 @brightGray: #394147;
 @straw: #D1BD88;
 @sanJuan: #314D69;
