--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,3 @@
-.custom-button {
-  background-color: #D1BD88;
-  padding: 2% 4%;
-  border-radius: 500px;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-}
-.custom-button:hover {
-  cursor: pointer;
-}
 /* 
   http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
@@ -151,6 +140,9 @@ h2 {
 a {
   text-decoration: none;
 }
+a:visited {
+  color: white;
+}
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -174,12 +166,32 @@ a {
   font-size: 2rem;
 }
 .nav-bar nav a:hover {
+  background-color: white;
+  color: #D1BD88;
+  border: 1px solid #D1BD88;
   cursor: pointer;
 }
-.nav-bar nav span {
-  padding-top: 5px;
-  display: inline-block;
-  transform: rotate(180deg);
+footer {
+  width: 100vw;
+  background-color: #314D69;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+}
+footer ul {
+  width: 33%;
+  display: flex;
+  justify-content: space-between;
+}
+footer ul a:hover {
+  color: #D1BD88;
+}
+footer .copyright {
+  font-size: 1rem;
+  font-weight: bold;
 }
 header {
   padding-top: 70px;
@@ -217,6 +229,9 @@ header .header-right button {
   border: none;
 }
 header .header-right button:hover {
+  background-color: white;
+  color: #D1BD88;
+  border: 1px solid #D1BD88;
   cursor: pointer;
 }
 .bottom-banner img {
