--- a/less/homepage.less
+++ b/less/homepage.less
@@ -3,7 +3,7 @@ header {
   width: 100vw;
   display: flex;
   justify-content: center;
-  background-image: linear-gradient(to right, @gullGray, @sanJuan);
+  background-image: linear-gradient(to right, @lightBg, @mediumBg);
   
   .header-left{
     img {
@@ -14,7 +14,7 @@ header {
 
   .header-right{
     width: 400px;
-    background-color: @brightGray;
+    background-color: @darkBg;
     border-radius: 15px;
     margin: 10px;
     display: flex;
@@ -27,7 +27,7 @@ header {
       padding-right: 15px;
     }
     button {
-      .custom-button;
+      .custom-button(@altColor, white);
      border: none; 
     }
   }
