--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,6 +5,7 @@
       color: white;
       font-weight: bold;
       font-size: 2rem;
+      border: none;
 
       &:hover {
         background-color: @c2;
