--- a/less/global.less
+++ b/less/global.less
@@ -1,3 +1,11 @@
+.container {
+  margin: 0;
+  padding: 0;
+  @media(min-width: 1200px){
+    width: 100%;
+  }
+}
+
 h1 {
   font-size: 4rem;
   font-weight: bold;
@@ -12,7 +20,9 @@ h2 {
 
 a {
   text-decoration: none;
-  
+  &:hover {
+    text-decoration: none;
+  } 
   &:visited {
     color: white;
   }
