--- a/less/homepage.less
+++ b/less/homepage.less
@@ -28,14 +28,60 @@ header {
     }
     button {
       .custom-button(@altColor, white);
-     border: none; 
+    }
+  }
+}
+
+.carousel {
+  margin: 25px auto 0 auto;
+  max-width: 50%;
+  img {
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    height: 500px !important;
+    width: auto;
+  }
+  .item {
+    button {
+      .custom-button(@altColor, white);
     }
   }
 }
 
 .bottom-banner{
-  img {
-  width: 100px;
-  height: auto;
+  width: 95%; 
+  margin: 25px auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: @darkBg;
+  border-radius: 15px;
+
+  .bottom-banner-left {
+    width: 67%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    p {
+      font-size: 2rem;
+      color: white;
+    }
+
+    button {
+      .custom-button(@altColor, white);
+    }
+  }
+
+  .bottom-banner-right {
+    width: 33%;
+
+    img {
+      width: 100%;;
+      height: auto;
+      border-radius: 0 15px 15px 0;
+    }
   }
 }
