--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
   background-image: linear-gradient(to right, @gullGray, @sanJuan);
   width: 100vw;
   height: 70px;
-
+  z-index: 1;
   nav {
     width: 20%;
     display: flex;
