about page made with some placeholder content

--- a/less/footer.less
+++ b/less/footer.less
@@ -11,9 +11,16 @@ footer {
     width: 33%;
     display: flex;
     justify-content: space-between;
-    
-    a:hover {
-      color: @altColor;
+    a {
+      color: white;
+      
+      &:visited{
+        color: white;
+      }
+      
+      &:hover {
+        color: @altColor;
+      }
     }
   }
   .copyright {
