--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,10 +2,11 @@
       background-color: @c1;
       padding: 2% 4%;
       border-radius: 500px;
-      color: white;
+      color: @c2;
       font-weight: bold;
       font-size: 2rem;
       border: none;
+      text-decoration: none;
 
       &:hover {
         background-color: @c2;
