--- a/css/index.css
+++ b/css/index.css
@@ -146,14 +146,34 @@ h2 {
   font-weight: bold;
   color: white;
 }
+h3 {
+  font-size: 1.5rem;
+  font-style: italic;
+}
+.button {
+  background-color: #D1BD88;
+  padding: 2% 4%;
+  border-radius: 500px;
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  border: none;
+  text-decoration: none;
+}
+.button:hover {
+  background-color: white;
+  color: #D1BD88;
+  border: 1px solid #D1BD88;
+  cursor: pointer;
+}
 a {
+  text-decoration: none;
+}
+a:visited {
   text-decoration: none;
 }
 a:hover {
   text-decoration: none;
-}
-a:visited {
-  color: white;
 }
 .nav-bar {
   display: flex;
@@ -178,6 +198,7 @@ a:visited {
   font-weight: bold;
   font-size: 2rem;
   border: none;
+  text-decoration: none;
 }
 .nav-bar nav a:hover {
   background-color: white;
@@ -199,6 +220,12 @@ footer ul {
   width: 33%;
   display: flex;
   justify-content: space-between;
+}
+footer ul a {
+  color: white;
+}
+footer ul a:visited {
+  color: white;
 }
 footer ul a:hover {
   color: #D1BD88;
@@ -233,47 +260,31 @@ header .header-right h2 {
   padding-left: 15px;
   padding-right: 15px;
 }
-header .header-right button {
-  background-color: #D1BD88;
-  padding: 2% 4%;
-  border-radius: 500px;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  border: none;
-}
-header .header-right button:hover {
-  background-color: white;
-  color: #D1BD88;
-  border: 1px solid #D1BD88;
-  cursor: pointer;
-}
 .carousel {
   margin: 25px auto 0 auto;
   max-width: 50%;
 }
-.carousel img {
-  border-radius: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  height: 500px !important;
-  width: auto;
+.carousel .carousel-inner > .item > a > img,
+.carousel .carousel-inner > .item > img,
+.carousel .img-responsive,
+.carousel .thumbnail a > img,
+.carousel .thumbnail > img {
+  height: 500px;
+  width: 100%;
 }
-.carousel .item button {
-  background-color: #D1BD88;
-  padding: 2% 4%;
-  border-radius: 500px;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  border: none;
+.carousel #search-for-it {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.carousel .item button:hover {
-  background-color: white;
-  color: #D1BD88;
-  border: 1px solid #D1BD88;
-  cursor: pointer;
+.carousel #search-for-it a {
+  margin: 15px 0;
+  width: 40%;
+}
+.carousel #search-for-it a:hover {
+  text-decoration: none;
 }
 .bottom-banner {
   width: 95%;
@@ -291,23 +302,9 @@ header .header-right button:hover {
   justify-content: space-around;
 }
 .bottom-banner .bottom-banner-left p {
+  padding: 15px;
   font-size: 2rem;
   color: white;
-}
-.bottom-banner .bottom-banner-left button {
-  background-color: #D1BD88;
-  padding: 2% 4%;
-  border-radius: 500px;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  border: none;
-}
-.bottom-banner .bottom-banner-left button:hover {
-  background-color: white;
-  color: #D1BD88;
-  border: 1px solid #D1BD88;
-  cursor: pointer;
 }
 .bottom-banner .bottom-banner-right {
   width: 33%;
@@ -316,4 +313,43 @@ header .header-right button:hover {
   width: 100%;
   height: auto;
   border-radius: 0 15px 15px 0;
+}
+.developer-banner {
+  margin: 0 auto 25px auto;
+  width: 90%;
+  background-color: #394147;
+  border-radius: 15px;
+  display: flex;
+}
+.developer-banner .banner-developer-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px;
+  color: white;
+}
+.developer-banner .banner-developer-text ul {
+  width: 15%;
+  display: flex;
+  justify-content: space-around;
+}
+.developer-banner .banner-developer-text ul a {
+  color: white;
+}
+.developer-banner .banner-developer-text ul a:hover {
+  color: #D1BD88;
+}
+.developer-banner .banner-developer-image {
+  height: 300px;
+}
+.developer-banner .banner-developer-image img {
+  border-radius: 0 15px 15px 0;
+  height: 100%;
+  width: auto;
+}
+.reverse .banner-developer-image {
+  order: -1;
+}
+.reverse .banner-developer-image img {
+  border-radius: 15px 0 0 15px;
 }
