--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,3 @@
-// Follow the order in the readme
-
 @import "variables";
 @import "mixins";
 @import "reset";
@@ -7,3 +5,4 @@
 @import "navigation";
 @import "footer";
 @import "homepage";
+@import "aboutpage";
