--- a/less/aboutpage.less
+++ b/less/aboutpage.less
@@ -3,21 +3,27 @@
   width: 90%;
   background-color: @darkBg;
   border-radius: 15px;
-  display: flex; 
+  display: flex;
   
   .banner-developer-text {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 15px;
     color: white;
+    width: auto;
 
     ul {
       width: 15%;
       display: flex;
       justify-content: space-around;
       a {
-        color: white;
+        i {
+          color: white;
+          width: 100%;
+          height: auto;
+        }
 
         &:hover {
           color: @altColor;
@@ -26,21 +32,17 @@
     }
   }
 
-  .banner-developer-image {
-    height: 300px;
-    img {
-      border-radius: 0 15px 15px 0;
-      height: 100%;
-      width: auto;
-    }
+  img {
+    border-radius: 0 15px 15px 0;
+    max-height: 300px;
+    height: auto;
+    width: auto;
   }
 }
 
 .reverse {
-  .banner-developer-image {
+  img {
     order: -1;
-    img {
-      border-radius: 15px 0 0 15px;
-    }
+    border-radius: 15px 0 0 15px;
   }
 }
