--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,7 @@
 @import "reset";
 @import "global";
 @import "navigation";
+@import "header";
 @import "footer";
 @import "homepage";
 @import "aboutpage";
