--- a/less/variables.less
+++ b/less/variables.less
@@ -8,3 +8,7 @@
 @straw: #D1BD88;
 @sanJuan: #314D69;
 @gullGray: #98ACB5;
+
+// breakpoints
+@tablet: ~"(max-width: 1100px)";
+@mobile: ~"(max-width: 680px)";
