--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,12 +1,13 @@
 .custom-button(@c1, @c2) {
       background-color: @c1;
-      padding: 2% 4%;
+      padding: 10px 20px;
       border-radius: 500px;
       color: @c2;
       font-weight: bold;
       font-size: 2rem;
       border: none;
       text-decoration: none;
+      text-shadow: 0 1px 2px rgba(0,0,0,.6);
 
       &:hover {
         background-color: @c2;
