--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,8 +4,12 @@
   position: fixed;
   background-image: linear-gradient(to right, @gullGray, @sanJuan);
   width: 100vw;
-  height: 70px;
   z-index: 1;
+  
+  h1 {
+    padding: 15px;
+  }
+
   nav {
     width: 30%;
     display: flex;
@@ -13,6 +17,30 @@
     align-items: center;
     a {
       .custom-button(@altColor, white);
+    }
+    
+    @media @tablet {
+      width: 50%;
+    }
+  }
+
+  @media @mobile {
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px white solid;
+    nav {
+      flex-direction: column;
+
+      a{
+        text-align: center;
+        width: 100vw;
+        border-radius: 0;
+        border-top: 2px white solid;
+
+        &:hover {
+          border: white;
+        }
+      }
     }
   }
 }
