--- a/css/index.css
+++ b/css/index.css
@@ -424,6 +424,12 @@ footer .copyright {
   width: 15%;
   display: flex;
   justify-content: space-around;
+  margin-top: 15px;
+}
+@media (max-width: 1100px) {
+  .developer-banner .banner-developer-text ul {
+    width: 100%;
+  }
 }
 .developer-banner .banner-developer-text ul a i {
   color: white;
@@ -438,6 +444,11 @@ footer .copyright {
   max-height: 300px;
   height: auto;
   width: auto;
+}
+@media (max-width: 720px) {
+  .developer-banner img {
+    display: none;
+  }
 }
 .reverse img {
   order: -1;
