--- a/less/header.less
+++ b/less/header.less
@@ -73,6 +73,11 @@ header {
 
 .about-header {
   padding-top: 99px;
+  
+  @media @mobile {
+    padding-top: 225px;
+  }
+
   .about-header-left {
     img {
       background: white;
