--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,10 +2,16 @@
   display: flex;
   justify-content: space-between;
   position: fixed;
-  background-image: linear-gradient(to right, @gullGray, @sanJuan);
+  background-color: @sanJuan;
   width: 100vw;
   z-index: 1;
   
+  @media @mobile {
+    flex-direction: column;
+    align-items: center;
+    //border-bottom: 2px white solid;
+  }
+
   h1 {
     padding: 15px;
   }
@@ -15,32 +21,28 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    a {
-      .custom-button(@altColor, white);
-    }
-    
+
     @media @tablet {
       width: 50%;
     }
-  }
-
-  @media @mobile {
-    flex-direction: column;
-    align-items: center;
-    border-bottom: 2px white solid;
-    nav {
+    
+    @media @mobile {
       flex-direction: column;
+    }
 
-      a{
+    a {
+      .custom-button(@altColor, white);
+      
+      &:hover {
+        border: white;
+      }
+   
+      @media @mobile {
         text-align: center;
         width: 100vw;
         border-radius: 0;
-        border-top: 2px white solid;
-
-        &:hover {
-          border: white;
-        }
+        //border-top: 2px white solid;
       }
-    }
+    } 
   }
 }
