--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,27 +1,30 @@
 .carousel {
   margin: 25px auto 0 auto;
-  max-width: 50%;
-  .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
-    height: 500px;
-    width: 100%;
+  max-width:80%;
+  @media @mobile {
+    display: none;
   }
+  
+  .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    width: 100%;
+    height: auto;
+  }
+  
   #search-for-it {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  
     a{
       margin: 15px 0;
       width: 40%;
+  
       &:hover {
         text-decoration: none;
       } 
     } 
-  }
-
-  @media @tablet {
-    display: none;
   }
 }
 
@@ -38,6 +41,7 @@
     flex-direction: column;
     max-height: 100%;
   }
+  
   .bottom-banner-left {
     width: 67%;
     display: flex;
@@ -68,9 +72,8 @@
     }
   }
 
-  img {
+  .bottom-banner-img {
     width: 33%;
-    height: auto;
     object-fit: cover;
     border-radius: 0 15px 15px 0;
 
@@ -80,6 +83,5 @@
       order: -1; 
       border-radius: 15px 15px 0 0; 
     }
-
   }
 }
