--- a/css/index.css
+++ b/css/index.css
@@ -134,14 +134,14 @@ body {
   overflow-x: hidden;
 }
 h1 {
+  color: #D1BD88;
   font-size: 4rem;
   font-weight: bold;
-  color: #D1BD88;
 }
 h2 {
+  color: white;
   font-size: 3rem;
   font-weight: bold;
-  color: white;
 }
 h3 {
   font-size: 1.5rem;
@@ -149,23 +149,6 @@ h3 {
 }
 p {
   line-height: 1.5;
-}
-.button {
-  background-color: #D1BD88;
-  padding: 10px 20px;
-  border-radius: 500px;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  border: none;
-  text-decoration: none;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-}
-.button:hover {
-  background-color: white;
-  color: #D1BD88;
-  border: 1px solid #D1BD88;
-  cursor: pointer;
 }
 a {
   text-decoration: none;
@@ -176,28 +159,46 @@ a:visited {
 a:hover {
   text-decoration: none;
 }
+.button {
+  background-color: #D1BD88;
+  border: none;
+  border-radius: 500px;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+.button:hover {
+  background-color: white;
+  border: 1px solid #D1BD88;
+  color: #D1BD88;
+  cursor: pointer;
+}
 .nav-bar {
+  background-color: #314D69;
   display: flex;
   justify-content: space-between;
   position: fixed;
-  background-color: #314D69;
   width: 100vw;
   z-index: 1;
 }
 @media (max-width: 720px) {
   .nav-bar {
-    flex-direction: column;
     align-items: center;
+    border-bottom: 2px white solid;
+    flex-direction: column;
   }
 }
 .nav-bar h1 {
   padding: 15px;
 }
 .nav-bar nav {
-  width: 30%;
+  align-items: center;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  width: 30%;
 }
 @media (max-width: 1100px) {
   .nav-bar nav {
@@ -211,19 +212,20 @@ a:hover {
 }
 .nav-bar nav a {
   background-color: #D1BD88;
-  padding: 10px 20px;
+  border: none;
   border-radius: 500px;
   color: white;
-  font-weight: bold;
   font-size: 2rem;
-  border: none;
+  font-weight: bold;
+  padding: 10px 20px;
   text-decoration: none;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  margin: 0 5px 0 5px;
 }
 .nav-bar nav a:hover {
   background-color: white;
-  color: #D1BD88;
   border: 1px solid #D1BD88;
+  color: #D1BD88;
   cursor: pointer;
 }
 .nav-bar nav a:hover {
@@ -234,20 +236,21 @@ a:hover {
     text-align: center;
     width: 100vw;
     border-radius: 0;
+    border-top: 2px white solid;
   }
 }
 header {
-  width: 100vw;
+  align-items: center;
+  background-image: linear-gradient(to right, #98ACB5, #314D69);
   display: flex;
   justify-content: center;
-  background-image: linear-gradient(to right, #98ACB5, #314D69);
-  align-items: center;
   margin-bottom: 25px;
+  width: 100vw;
 }
 @media (max-width: 720px) {
   header {
-    padding-bottom: 15px;
     display: block;
+    padding-bottom: 15px;
   }
 }
 @media (max-width: 720px) {
@@ -256,34 +259,34 @@ header {
   }
 }
 header .header-left img {
-  width: 200px;
   height: auto;
+  width: 200px;
 }
 header .header-right {
-  width: 400px;
+  align-items: center;
   background-color: #394147;
   border-radius: 15px;
-  margin: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-around;
+  margin: 10px;
+  width: 400px;
 }
 @media (max-width: 720px) {
   header .header-right {
-    width: 95%;
     margin: auto;
+    width: 95%;
   }
 }
 header .header-right h2 {
-  text-align: center;
   margin-top: 15px;
   padding-left: 15px;
   padding-right: 15px;
+  text-align: center;
 }
 header .header-right p {
-  padding: 15px;
   color: white;
+  padding: 15px;
 }
 header .header-right a {
   margin-bottom: 15px;
@@ -297,7 +300,7 @@ header .header-right a {
   }
 }
 @media (max-width: 825px) {
-  .home-header .header-left img:last-child {
+  .home-header .header-left {
     display: none;
   }
 }
@@ -318,19 +321,19 @@ header .header-right a {
   padding: 10px;
 }
 footer {
-  width: 100vw;
+  align-items: center;
   background-color: #314D69;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   height: 100px;
+  justify-content: space-around;
+  width: 100vw;
 }
 footer ul {
-  width: 33%;
   display: flex;
   justify-content: space-between;
+  width: 33%;
 }
 footer ul a {
   color: white;
@@ -363,11 +366,11 @@ footer .copyright {
   height: auto;
 }
 .carousel #search-for-it {
-  height: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
   justify-content: center;
-  align-items: center;
 }
 .carousel #search-for-it a {
   margin: 15px 0;
@@ -377,13 +380,13 @@ footer .copyright {
   text-decoration: none;
 }
 .bottom-banner {
-  width: 95%;
-  margin: 25px auto;
-  display: flex;
-  justify-content: space-between;
   background-color: #394147;
   border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+  margin: 25px auto;
   max-height: 300px;
+  width: 95%;
 }
 @media (max-width: 720px) {
   .bottom-banner {
@@ -392,11 +395,11 @@ footer .copyright {
   }
 }
 .bottom-banner .bottom-banner-left {
-  width: 67%;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-around;
+  width: 67%;
 }
 @media (max-width: 720px) {
   .bottom-banner .bottom-banner-left {
@@ -412,65 +415,86 @@ footer .copyright {
   }
 }
 .bottom-banner .bottom-banner-left p {
-  padding: 15px;
-  font-size: 1.5rem;
   color: white;
+  font-size: 1.5rem;
+  padding: 15px;
 }
 .bottom-banner .bottom-banner-left .button {
   margin-bottom: 15px;
 }
 .bottom-banner .bottom-banner-img {
-  width: 33%;
-  object-fit: cover;
   border-radius: 0 15px 15px 0;
+  object-fit: cover;
+  width: 33%;
 }
 @media (max-width: 720px) {
   .bottom-banner .bottom-banner-img {
-    height: auto;
-    width: 100%;
-    order: -1;
     border-radius: 15px 15px 0 0;
+    height: auto;
+    order: -1;
+    width: 100%;
   }
 }
 .developer-banner {
-  margin: 0 auto 25px auto;
-  width: 90%;
   background-color: #394147;
   border-radius: 15px;
   display: flex;
+  margin: 0 auto 25px auto;
+  width: 90%;
 }
-.developer-banner .banner-developer-text {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 15px;
-  color: white;
-  width: auto;
-}
-.developer-banner .banner-developer-text ul {
-  width: 15%;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 15px;
-}
-@media (max-width: 1100px) {
-  .developer-banner .banner-developer-text ul {
+@media (max-width: 720px) {
+  .developer-banner {
+    border-radius: 0;
+    margin: 0 auto 0 auto;
     width: 100%;
   }
 }
-.developer-banner .banner-developer-text ul a i {
+.developer-banner .banner-text {
   color: white;
-  width: 100%;
-  height: auto;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 15px;
+  width: auto;
 }
-.developer-banner .banner-developer-text ul a i:hover {
+@media (max-width: 720px) {
+  .developer-banner .banner-text h2 {
+    text-align: center;
+  }
+}
+.developer-banner .banner-text .expand-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+@media (max-width: 720px) {
+  .developer-banner .banner-text .expand-content .developer-description h3 {
+    text-align: center;
+  }
+}
+.developer-banner .banner-text .expand-content ul {
+  display: flex;
+  justify-content: space-around;
+  width: 15%;
+}
+@media (max-width: 1100px) {
+  .developer-banner .banner-text .expand-content ul {
+    width: 100%;
+  }
+}
+.developer-banner .banner-text .expand-content ul a i {
+  color: white;
+  height: auto;
+  width: 100%;
+}
+.developer-banner .banner-text .expand-content ul a i:hover {
   color: #D1BD88;
 }
 .developer-banner img {
   border-radius: 0 15px 15px 0;
-  max-height: 300px;
   height: auto;
+  max-height: 300px;
   width: auto;
 }
 @media (max-width: 720px) {
@@ -479,6 +503,9 @@ footer .copyright {
   }
 }
 .reverse img {
-  order: -1;
   border-radius: 15px 0 0 15px;
+  order: -1;
+}
+.temporary-hide {
+  display: none !important;
 }
